# pytorchcocotools

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  BATCH_OPTIMIZATION_SUMMARY.md  BENCHMARK_GROUPING.md  LICENSE  README.md  SECURITY.md  VECTORIZATION_ANALYSIS.md  conftest.py  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  config.yml
.github/agents/: perf-optimizer.md
.github/copilot-skills/: pytest-park.md
.github/workflows/: benchmark.yaml  build.yaml  copier-delete-branch.yaml  copier.yaml  docs.yaml  gpu.yaml  pre-commit.yaml  release-drafter.yaml  release.yaml
data/: .gitignore  example.json
docs/: mkdocs.yml
docs/docs/: coco.md  cocoeval.md  index.md  mask.md
docs/docs/notebooks/: index.md  intro_notebook.ipynb
notebooks/: download.ipynb  profiler.ipynb  pycocoDemo.ipynb  pycocoEvalDemo.ipynb  test.ipynb  view.ipynb
scripts/: download.sh  llm.sh  modal_runner.py
src/pytorchcocotools/: __init__.py  _entities.py  _eval.py  _mask.py  _maskApi.py  coco.py  cocoeval.py  common.py  dataset.py  entities.py  mask.py  mask_impl.py  utils.py
src/pytorchcocotools/entities/: __init__.py  additional.py  annotations.py  base.py  categories.py  coco.py  images.py  info.py  licenses.py
src/pytorchcocotools/internal/: __init__.py  cocoeval_types.py  entities.py  eval_types.py  mask_api.py  type_hints.py
src/pytorchcocotools/internal/mask_api/: README.md  __init__.py  bb_iou.py  bb_nms.py  rle_area.py  rle_decode.py  rle_encode.py  rle_fr_bbox.py  rle_fr_poly.py  rle_fr_string.py  rle_iou.py  rle_merge.py  rle_nms.py  rle_to_bbox.py  rle_to_string.py
src/pytorchcocotools/internal/structure/: __init__.py  additional.py  annotations.py  base.py  categories.py  coco.py  images.py  info.py  licenses.py  results.py  rle.py
src/pytorchcocotools/lightning/: datamodule.py  mean_ap.py
src/pytorchcocotools/lightning/metrics/: mean_ap.py
src/pytorchcocotools/other/: _maskApi.py  common.py  mask_impl.py
src/pytorchcocotools/torch/: datamodule.py  dataset.py  label.py  transform.py
src/pytorchcocotools/utils/: callable.py  dataclass.py  download.py  list.py  mask.py  optimize.py  poly.py  profiler.py  stage.py
src/pytorchcocotools/utils/coco/: download.py  files.py
tests/: conftest.py  test.c  test__mask.py  test__maskApi.py  test_base.py  test_benchmark_grouping.py  test_coco.py  test_mask.py  test_mask_api.py  test_mask_internal.py  test_og.py  test_other.py  test_structure_results.py
tests/coco/: conftest.py  test_annToMask.py  test_annToRLE.py  test_ann_to_mask.py  test_ann_to_rle.py  test_class.py  test_coco.py  test_getAnnIds.py  test_getCatIds.py  test_getImgIds.py  test_get_ann_ids.py  test_get_cat_ids.py  test_get_img_ids.py  test_loadAnns.py  test_loadCats.py  test_loadImgs.py  test_loadPyTorchAnnotations.py  test_load_anns.py  test_load_cats.py  test_load_imgs.py  test_load_pytorch_annotations.py
tests/cocoeval/: base_cases.py  conftest.py  test_accumulate_iou.py  test_cocoeval.py  test_computeIoU.py  test_compute_iou.py  test_compute_oks.py  test_evaluate_img.py  test_evaluate_iou.py  test_evaluate_oks.py
tests/dataset/: test_dataset.py
tests/lightning/: conftest.py  test_datamodule.py  test_mean_ap.py
tests/lightning/mean_ap/: conftest.py  test_benchmark.py  test_coco_stats_tensor_dict.py  test_compute_bbox.py  test_compute_edge_cases.py  test_compute_fixtures.py  test_compute_internal.py  test_get_classes.py  test_stress_compute.py  test_stress_update.py  test_update.py  test_update_validation.py
tests/mask/: base_cases.py  test.c  test_area.py  test_batch_benchmark.py  test_batch_versions.py  test_decode.py  test_encode.py  test_frPyObjects.py  test_fr_py_objects.py  test_iou.py  test_merge.py  test_toBbox.py  test_to_bbox.py
tests/original/: test_maskutil.py  test_special_maskutil.py  test_special_toBbox.py
tests/profiling/: README.md  conftest.py  test_bb_iou.py  test_bb_nms.py  test_fr_bbox.py  test_fr_poly.py  test_fr_string.py  test_nms.py  test_rle_merge.py  test_to_string.py
tests/torch/: test_dataset.py
tests/utils/: test_callable.py  test_coco_download.py
